support running with jdk11